# WebWindow

./: .gitignore  Directory.Build.props  README.md  WebWindow.Dev.sln  WebWindow.Native.sln  WebWindow.Samples.sln  azure-pipelines.yml
samples/BlazorDesktopApp/: BlazorDesktopApp.csproj  Program.cs  Startup.cs  _Imports.razor
samples/BlazorDesktopApp/Shared/: MainLayout.razor  NavMenu.razor
samples/BlazorDesktopApp/wwwroot/: index.html
samples/HelloWorldApp/: HelloWorldApp.csproj  Program.cs
samples/HelloWorldApp/wwwroot/: index.html
samples/VueFileExplorer/: Program.cs
samples/VueFileExplorer/wwwroot/: app.js  index.html  styles.css
src/WebWindow/: WebWindow.cs  WebWindow.csproj  WebWindowOptions.cs
src/WebWindow.Blazor/: ComponentsDesktop.cs  ConventionBasedStartup.cs  DesktopApplicationBuilder.cs  DesktopDispatcher.cs  DesktopJSRuntime.cs  DesktopNavigationInterception.cs  DesktopNavigationManager.cs  DesktopRenderer.cs  DesktopSynchronizationContext.cs  GlobalSuppressions.cs  IComponentsApplicationBuilder.cs  IPC.cs  JSInteropMethods.cs  NullDispatcher.cs  WebWindow.Blazor.csproj
src/WebWindow.Blazor.JS/: HowToUpdateUpstreamFiles.md  WebWindow.Blazor.JS.csproj  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/WebWindow.Blazor.JS/src/: Boot.Desktop.ts  IPC.ts  RenderQueue.ts
src/WebWindow.Blazor.JS/upstream/aspnetcore/web.js/src/Services/: NavigationManager.ts
src/WebWindow.Blazor/SharedSource/: ArrayBuilder.cs  ElementReferenceJsonConverter.cs  RenderBatchWriter.cs
src/WebWindow.Native/: .WebWindow.Linux.cpp.swp  CMakeLists.txt  Exports.cpp  IAsyncOperationHelper.h  WebWindow.Linux.cpp  WebWindow.Mac.AppDelegate.h  WebWindow.Mac.AppDelegate.m  WebWindow.Mac.AppDelegate.mm  WebWindow.Mac.NavigationDelegate.h  WebWindow.Mac.NavigationDelegate.mm  WebWindow.Mac.UiDelegate.h  WebWindow.Mac.UiDelegate.m  WebWindow.Mac.UiDelegate.mm  WebWindow.Mac.UrlSchemeHandler.m  WebWindow.Mac.mm  WebWindow.Native.cmproj  WebWindow.Native.vcxproj  WebWindow.Native.vcxproj.filters  WebWindow.Windows.cpp  WebWindow.h  packages.config
src/WebWindow.Native/include/: WebWindow.Mac.UiDelegate.h  WebWindow.Mac.UrlSchemeHandler.h
src/WebWindow.Native/src/: Exports.cpp  WebWindow.Linux.cpp  WebWindow.Mac.AppDelegate.mm  WebWindow.Mac.UiDelegate.mm  WebWindow.Mac.mm  WebWindow.Windows.cpp
testassets/HelloWorldApp/: HelloWorldApp.csproj  Program.cs
testassets/HelloWorldApp/Properties/: launchSettings.json
testassets/HelloWorldApp/wwwroot/: index.html
testassets/MyBlazorApp/: MyBlazorApp.csproj  Program.cs  Startup.cs  _Imports.razor
testassets/MyBlazorApp/Pages/: FetchData.razor  Size.razor  WindowProp.razor
testassets/MyBlazorApp/Shared/: NavMenu.razor
